fixed background image, set images on buttons, fixed text wrap

--- a/museumPassport/scss/ionic.app.scss
+++ b/museumPassport/scss/ionic.app.scss
@@ -17,20 +17,26 @@ $dark:                            #444 !default;
 
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
-$big-bg:       'http://i.imgur.com/hCWzjaf.jpg?1';
 // $button-stamp: 'http://i.imgur.com/9QI4UH4.png?1';
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
-.scroll-bg, .museum, .exhibit, .question {
-  background: url($big-bg) no-repeat center center fixed;
-  background-size: cover;
+.logo {
+  width: 180px;
+  height: 150px;
 }
 
-.login-container {
-    display: -webkit-flex;
-    -webkit-flex-direction: column;
-    height: 100%;
+.button-large {
+  background-image: url('http://i.imgur.com/9QI4UH4.png?1');
+  background-size: 80px 80px;
+  vertical-align: middle;
+}
+
+.scroll-content {
+  display: -webkit-flex;
+  -webkit-flex-direction: column;
+  background: url('http://i.imgur.com/hCWzjaf.jpg?1');
+  background-size: 100% 100%;
 }
 
 .login-container > .header {
@@ -40,4 +46,13 @@ $big-bg:       'http://i.imgur.com/hCWzjaf.jpg?1';
 
 .login-container > .button-row img {
     max-width: 80%;
+}
+
+.museum, .exhibit, .question, .item {
+  background-color: transparent !important;
+  border: none;
+}
+
+.museum-header, .exhibit-header, .question-header {
+  padding-top: 5%;
 }
